--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://hosting.renderforestsites.com/27275532/1337287/media/4441c38e76395561da703f3c11e8f267.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colosseum'25</title>
   </head>
